added dummy posts to test out pagination

--- a/_posts/2016-11-18-writing.md
+++ b/_posts/2016-11-18-writing.md
@@ -1,6 +1,6 @@
 ---
 layout: post
-title: "Writing"
+title: "Going beyond graphic design"
 description: "how can i write better?"
 og_image: "documentation/sample-image.jpg"
 tags: [design, jekyll]
