--- a/_posts/2016-11-23-process.md
+++ b/_posts/2016-11-23-process.md
@@ -1,6 +1,6 @@
 ---
 layout: post
-title: "Asking questions"
+title: "Writing as a graphic design process"
 description: "how can i write better?"
 og_image: "documentation/sample-image.jpg"
 tags: [design, jekyll]
