--- a/_posts/2016-11-26-TIL.md
+++ b/_posts/2016-11-26-TIL.md
@@ -1,9 +1,9 @@
 ---
 layout: post
-title: "Writing as a graphic design process"
-description: "how can i write better?"
+title: "How to use Jekyll"
+description: "Learning new things can be challenging but that shouldn't frighten you."
 og_image: "documentation/sample-image.jpg"
-tags: [design, jekyll]
+tags: [til]
 ---
 
 Chalk uses the default Jekyll syntax highlighting gem Rouge. It has a customized style for both light and dark theme.
