--- a/_posts/2016-11-27-writing.md
+++ b/_posts/2016-11-27-writing.md
@@ -1,9 +1,9 @@
 ---
 layout: post
-title: "What is my new project, Faculty, about?"
-description: "how can i write better?"
+title: "Writing as part of the design process."
+description: "Writing can and should (sometimes) be uncomfortable."
 og_image: "documentation/sample-image.jpg"
-tags: [design, jekyll]
+tags: [personal]
 ---
 
 Chalk uses the default Jekyll syntax highlighting gem Rouge. It has a customized style for both light and dark theme.
