--- a/_posts/2016-11-27-writing.md
+++ b/_posts/2016-11-27-writing.md
@@ -6,89 +6,14 @@ og_image: "documentation/sample-image.jpg"
 tags: [personal]
 ---
 
-Chalk uses the default Jekyll syntax highlighting gem Rouge. It has a customized style for both light and dark theme.
-Use the `highlight` tag to use the following code highlighting your preferred language:
 
-{% highlight html %}
-<!-- This is a comment -->
-<div class="grid">
-  <h1>This is a heading</h1>
-  <p>
-    This is a paragraph text.
-  </p>
-</div>
-{% endhighlight %}
 
-## Headings
+Lorem ipsum dolor sit amet, consectetur adipiscing elit. Sed mollis auctor tellus, eu porta nisi porta sed. Sed tincidunt placerat nisl vitae sodales. Pellentesque finibus, ex cursus rutrum dictum, elit lacus bibendum velit, vitae pharetra nibh sapien eu nisi. Aliquam malesuada aliquet eros, nec ultricies erat scelerisque a. Sed sed suscipit neque. Praesent quis ipsum elementum, sodales erat non, ultricies ligula. Aliquam fermentum semper sollicitudin. Aenean efficitur justo erat, a rhoncus est lacinia sed. Fusce et laoreet dolor. Phasellus vel venenatis dui, id consectetur enim. Vivamus id turpis vitae erat congue accumsan. Mauris lobortis dictum pharetra. In in ante eget enim congue dignissim. Vivamus ultrices mi ac dui varius, quis molestie augue auctor.
 
-Chalk includes 3 headings by default:
+Donec scelerisque magna non dolor ullamcorper ultricies. Vivamus ut quam sit amet orci sollicitudin dignissim. Nulla hendrerit in odio dictum venenatis. Proin ac pulvinar felis, at lobortis justo. Donec vitae egestas quam, non hendrerit quam. Donec accumsan risus ac quam sagittis, quis tincidunt lacus aliquam. Proin aliquam purus metus. In et sollicitudin lacus. Donec vestibulum tortor sed elit auctor consectetur. Morbi vulputate, arcu id egestas interdum, libero purus rhoncus enim, vitae pulvinar enim felis in diam. Sed mattis mi ut ex auctor maximus id eget metus. Duis quam erat, dignissim ornare eros sit amet, maximus venenatis orci. Maecenas aliquam urna elementum faucibus varius.
 
-## Heading first level
-### Heading second level
-#### Heading third level
+Etiam faucibus convallis erat, sit amet accumsan metus. Quisque risus magna, bibendum imperdiet convallis vitae, accumsan eu tortor. Morbi eu est tincidunt, semper arcu ut, aliquet mi. Duis rutrum vehicula nisi et lobortis. Nunc eget tincidunt metus, sit amet dapibus ligula. Integer sit amet varius leo. Fusce aliquet ex ut commodo tempus. Phasellus tempor interdum magna eget facilisis. Nulla finibus non felis sit amet ultricies. Cras a pellentesque ipsum, sed placerat magna. Vestibulum et tortor risus. Integer eget neque rhoncus tortor scelerisque auctor id non augue. Praesent eu elementum massa, sed ullamcorper ligula. Maecenas purus erat, sollicitudin eget sollicitudin quis, ullamcorper quis turpis.
 
-{% highlight markdown %}
-## Heading first level
-### Heading second level
-#### Heading third level
-{% endhighlight %}
+Phasellus sed tempus tellus, quis suscipit eros. Donec eget turpis neque. Aliquam ligula sem, rutrum non fringilla tempus, posuere vitae magna. Maecenas nec sodales dui. Praesent a ornare est. Vivamus at luctus ipsum. Vestibulum hendrerit, nulla ut fringilla commodo, est nisi blandit leo, sed hendrerit mauris risus sit amet nulla. Sed ac mattis nulla. Proin tristique purus vitae nisl aliquam suscipit. Nulla vestibulum tortor sit amet velit maximus pretium. Nunc egestas convallis augue sit amet vulputate. In at ullamcorper erat. Praesent risus mi, consequat vel consequat sit amet, ornare a magna.
 
-## Lists
-
-Unordered list example:
-* Unordered list item 1
-* Unordered list item 2
-* Unordered list item 3
-* Unordered list item 4
-
-Ordered list example:
-1. Ordered list item 1
-2. Ordered list item 1
-3. Ordered list item 1
-4. Ordered list item 1
-
-{% highlight markdown %}
-* Unordered list item 1
-* Unordered list item 2
-
-1. Order list item 1
-2. Order list item 1
-{% endhighlight %}
-
-## Quotes
-
-A quote looks like this:
-
-> Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor
-incididunt ut labore et dolore magna.
-
-{% highlight markdown %}
-> Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor
-incididunt ut labore et dolore magna.
-{% endhighlight %}
-
-## Media
-
-Images can be added with a default `<img>` tag.
-If you wish that an image can be enlarged on click use the image include tag. You can pass 3 variables:
-- `path`: Image to show in the blog post.
-- `path-detail`: Image to show when enlarging.
-- `alt`: Alt text for image in blog post.
-
-{% include image.html path="documentation/sample-image.jpg" path-detail="documentation/sample-image@2x.jpg" alt="Sample image" %}
-
-{% highlight html %}
-{% include image.html path="documentation/sample-image.jpg" path-detail="documentation/sample-image@2x.jpg" alt="Sample image" %}
-{% endhighlight %}
-
-Videos can be added and are responsive by default (4x3 by default, 16x9 with extra class).
-
-<div class="embed-responsive embed-responsive-16by9">
-<iframe src="https://www.youtube.com/embed/vO7m8Hre72E?modestbranding=1&autohide=1&showinfo=0&controls=0" frameborder="0" allowfullscreen></iframe>
-</div>
-
-{% highlight html %}
-<div class="embed-responsive embed-responsive-16by9">
-<iframe src="url-to-video" frameborder="0" allowfullscreen></iframe>
-</div>
-{% endhighlight %}
+Curabitur finibus mi ultricies turpis rutrum, a egestas risus dignissim. Aenean tempor scelerisque dui, ut scelerisque orci ultricies vel. Mauris non nunc lobortis, fermentum lectus vitae, blandit nisi. Ut orci erat, elementum in orci quis, porta tincidunt ex. Maecenas ultricies ipsum sit amet vehicula pharetra. Proin nibh urna, elementum a eros ac, aliquam lobortis diam. Sed quis metus ac elit vulputate mollis. Sed pulvinar consectetur efficitur. Curabitur vitae faucibus mi, non auctor erat. Morbi et eros auctor nunc finibus tempus ac eu metus. Donec posuere fringilla augue, at rutrum magna facilisis dapibus. Pellentesque lacus lacus, maximus quis euismod vitae, blandit a justo. Curabitur tincidunt, risus eget gravida aliquet, elit nibh finibus metus, in finibus nulla erat non enim. Sed efficitur venenatis libero eget vulputate.
