update to files before new layout page

--- a/_posts/2016-11-27-writing.md
+++ b/_posts/2016-11-27-writing.md
@@ -1,19 +1,17 @@
 ---
 layout: post
-title: "Writing as part of the design process."
-description: "Writing can and should (sometimes) be uncomfortable."
+title: "**sigh**"
+description: "Journal or Blog? Which is it?"
 og_image: "documentation/sample-image.jpg"
 tags: [personal]
 ---
 
+I often fantasize about being an avid writer.
+
+<i> “Today will be the day I write an amazing piece! I will share it with the world and all will great.”</i>
+
+Life doesn't work that way. For the past couple of years, I've maneuvered between Wordpress and Tumblr. Which do I use? Which is better? Why do some people prefer one over the other? Does it matter? Ahh! At last I stumbled upon a static site generator called <a href="https://jekyllrb.com/" target="_blank">Jekyll</a>. It allows me to have total control over the layout of my journal.
+
+So why keep a journal? Because, I enjoy writing, I want to improve my writing, I want to have an outlet on the web to share my thoughts, and because I enjoy it. Also, creating a blog through a static generator, opens the door for experimentation with web typography, which I absolutely love and obsess over.
 
 
-Lorem ipsum dolor sit amet, consectetur adipiscing elit. Sed mollis auctor tellus, eu porta nisi porta sed. Sed tincidunt placerat nisl vitae sodales. Pellentesque finibus, ex cursus rutrum dictum, elit lacus bibendum velit, vitae pharetra nibh sapien eu nisi. Aliquam malesuada aliquet eros, nec ultricies erat scelerisque a. Sed sed suscipit neque. Praesent quis ipsum elementum, sodales erat non, ultricies ligula. Aliquam fermentum semper sollicitudin. Aenean efficitur justo erat, a rhoncus est lacinia sed. Fusce et laoreet dolor. Phasellus vel venenatis dui, id consectetur enim. Vivamus id turpis vitae erat congue accumsan. Mauris lobortis dictum pharetra. In in ante eget enim congue dignissim. Vivamus ultrices mi ac dui varius, quis molestie augue auctor.
-
-Donec scelerisque magna non dolor ullamcorper ultricies. Vivamus ut quam sit amet orci sollicitudin dignissim. Nulla hendrerit in odio dictum venenatis. Proin ac pulvinar felis, at lobortis justo. Donec vitae egestas quam, non hendrerit quam. Donec accumsan risus ac quam sagittis, quis tincidunt lacus aliquam. Proin aliquam purus metus. In et sollicitudin lacus. Donec vestibulum tortor sed elit auctor consectetur. Morbi vulputate, arcu id egestas interdum, libero purus rhoncus enim, vitae pulvinar enim felis in diam. Sed mattis mi ut ex auctor maximus id eget metus. Duis quam erat, dignissim ornare eros sit amet, maximus venenatis orci. Maecenas aliquam urna elementum faucibus varius.
-
-Etiam faucibus convallis erat, sit amet accumsan metus. Quisque risus magna, bibendum imperdiet convallis vitae, accumsan eu tortor. Morbi eu est tincidunt, semper arcu ut, aliquet mi. Duis rutrum vehicula nisi et lobortis. Nunc eget tincidunt metus, sit amet dapibus ligula. Integer sit amet varius leo. Fusce aliquet ex ut commodo tempus. Phasellus tempor interdum magna eget facilisis. Nulla finibus non felis sit amet ultricies. Cras a pellentesque ipsum, sed placerat magna. Vestibulum et tortor risus. Integer eget neque rhoncus tortor scelerisque auctor id non augue. Praesent eu elementum massa, sed ullamcorper ligula. Maecenas purus erat, sollicitudin eget sollicitudin quis, ullamcorper quis turpis.
-
-Phasellus sed tempus tellus, quis suscipit eros. Donec eget turpis neque. Aliquam ligula sem, rutrum non fringilla tempus, posuere vitae magna. Maecenas nec sodales dui. Praesent a ornare est. Vivamus at luctus ipsum. Vestibulum hendrerit, nulla ut fringilla commodo, est nisi blandit leo, sed hendrerit mauris risus sit amet nulla. Sed ac mattis nulla. Proin tristique purus vitae nisl aliquam suscipit. Nulla vestibulum tortor sit amet velit maximus pretium. Nunc egestas convallis augue sit amet vulputate. In at ullamcorper erat. Praesent risus mi, consequat vel consequat sit amet, ornare a magna.
-
-Curabitur finibus mi ultricies turpis rutrum, a egestas risus dignissim. Aenean tempor scelerisque dui, ut scelerisque orci ultricies vel. Mauris non nunc lobortis, fermentum lectus vitae, blandit nisi. Ut orci erat, elementum in orci quis, porta tincidunt ex. Maecenas ultricies ipsum sit amet vehicula pharetra. Proin nibh urna, elementum a eros ac, aliquam lobortis diam. Sed quis metus ac elit vulputate mollis. Sed pulvinar consectetur efficitur. Curabitur vitae faucibus mi, non auctor erat. Morbi et eros auctor nunc finibus tempus ac eu metus. Donec posuere fringilla augue, at rutrum magna facilisis dapibus. Pellentesque lacus lacus, maximus quis euismod vitae, blandit a justo. Curabitur tincidunt, risus eget gravida aliquet, elit nibh finibus metus, in finibus nulla erat non enim. Sed efficitur venenatis libero eget vulputate.
