--- a/_posts/2016-11-27-writing.md
+++ b/_posts/2016-11-27-writing.md
@@ -2,7 +2,7 @@
 layout: post
 title: "**sigh**"
 description: "Journal or Blog? Which is it?"
-og_image: "documentation/sample-image.jpg"
+og_image: "projects/anger-poster.jpg"
 tags: [personal]
 ---
 
