--- a/_posts/2016-11-16-vatic.md
+++ b/_posts/2016-11-16-vatic.md
@@ -5,21 +5,20 @@ client: "Vatic Labs"
 brief: "Vatic Labs came to UpShift Creative seeking a comprehensive brand identity that is engaging and responsive to various mediums. Their demographic included graduate students interested in quantitative trading. I worked closely with the art director to execute concepts and provide ideas while maintaining our audience and client in mind."
 research:
 solution:
-og_image: "projects/anger-poster.jpg"
-image: vatic_1.jpg
+image: vatic/vatic_thumb.jpg
 tags: [project]
 ---
 
-{% include image.html path="projects/vatic_0.jpg" path-detail="projects/vatic_0.jpg" alt="Sample image" %}
+{% include image.html path="projects/vatic/vatic_0.jpg" path-detail="projects/vatic/vatic_0.jpg" alt="Sample image" %}
 
 
 
-{% include image.html path="projects/vatic_1.jpg" path-detail="projects/vatic_1.jpg" alt="Sample image" %}
+{% include image.html path="projects/vatic/vatic_1.jpg" path-detail="projects/vatic/vatic_1.jpg" alt="Sample image" %}
 
 
-{% include image.html path="projects/vatic_2.jpg" path-detail="projects/vatic_2.jpg" alt="Sample image" %}
+{% include image.html path="projects/vatic/vatic_2.jpg" path-detail="projects/vatic/vatic_2.jpg" alt="Sample image" %}
 
 
 
-{% include image.html path="projects/vatic_3.jpg" path-detail="projects/vatic_3.jpg" alt="Sample image" %}
+{% include image.html path="projects/vatic/vatic_3.jpg" path-detail="projects/vatic/vatic_3.jpg" alt="Sample image" %}
 
