--- a/_posts/2016-11-24-musicof2016.md
+++ b/_posts/2016-11-24-musicof2016.md
@@ -1,11 +1,11 @@
 ---
 layout: post
-title: "**sigh**"
+title: "Music of 2016"
 description: "Journal or Blog? Which is it?"
-og_image: "projects/anger-poster.jpg"
 tags: [personal]
 ---
 
+2016 was an exciting year for music. Spotify has transformed the way I consume music
 I often fantasize about being an avid writer.
 
 <i> “Today will be the day I write an amazing piece! I will share it with the world and all will great.”</i>
