--- a/_posts/2016-11-26-anger.md
+++ b/_posts/2016-11-26-anger.md
@@ -6,18 +6,17 @@ brief: "Kenneth Anger is a prolific and influential film maker in the undergroun
 research: "The films included are Scorpio Rising and Kustom Kar Kommandos. The biggest source of inspiration was watching these films numerous types and also reading several biographies on Kenneth Anger. After obtaining a tone and mood, it was easy to start creating concepts."
 solution: "Due to the fact that Anger has a very dark personality and is fascinated with the occult and subliminal messages, I chose to use strong colors to evoke a sense of urgency and importance. Because most of Anger's work is open to interpretation, I decided to stay away from forcing any opinions upon the audience and allowing Anger's work to speak for itself."
 type: "Packaging"
-og_image: "projects/anger-poster.jpg"
-image: anger-poster.jpg
+image: anger/anger_thumb.jpg
 tags: [project]
 ---
 
-{% include image.html path="projects/anger_box-1.jpg" path-detail="projects/anger_box-1.jpg" alt="Sample image" %}
+{% include image.html path="projects/anger/anger_box-1.jpg" path-detail="projects/anger/anger_box-1.jpg" alt="Sample image" %}
 
 
 
-{% include image.html path="projects/anger_dvds.jpg" path-detail="projects/anger_dvds" alt="Sample image" %}
+{% include image.html path="projects/anger/anger_dvds.jpg" path-detail="projects/anger/anger_dvds" alt="Sample image" %}
 
-{% include image.html path="projects/anger-poster.jpg" path-detail="projects/anger-poster.jpg" alt="Sample image" %}
+{% include image.html path="projects/anger/anger-poster.jpg" path-detail="projects/anger/anger-poster.jpg" alt="Sample image" %}
 
 
 
