updated posts with content

--- a/_posts/2016-11-16-faculty.md
+++ b/_posts/2016-11-16-faculty.md
@@ -5,9 +5,11 @@ client: "Faculty, an online publication"
 brief: ""
 research:
 solution:
-image: faculty/faculty_thumb.jpg
+image: "faculty_thumb.jpg"
 tags: [project]
 ---
+
+
 
 {% include image.html path="projects/faculty/faculty-0.jpg" path-detail="projects/faculty/faculty-0.jpg" alt="Sample image" %}
 
