--- a/_posts/2016-12-25-finally.md
+++ b/_posts/2016-12-25-finally.md
@@ -1,16 +1,21 @@
 ---
 layout: post
-title: "Finally!"
-description: "Journal or Blog? Which is it?"
+title: "Writing as a designer."
+description: "An introduction on why writing is something designers should do more of."
 tags: [personal]
 ---
 
-I often fantasize about being an avid writer.
+I enjoy writing and unfortunately I don't get to do that much of it. I feel most inspired to write when I read the words of great designers like Michael Bierut, Jan Tschichold, Wolfgang Weingart, etc. and I see the beauty in the simplicity of their words. I view writing as an exercise that can not only make one a better writer but can help strengthen ideas.
 
-<i> “Today will be the day I write an amazing piece! I will share it with the world and all will great.”</i>
+I plan on making this personal journal a canvas for my writer, that will not only allow me to share my thoughts with the world but help me improve as a writer.
 
-Life doesn't work that way. For the past couple of years, I've maneuvered between Wordpress and Tumblr. Which do I use? Which is better? Why do some people prefer one over the other? Does it matter? Ahh! At last I stumbled upon a static site generator called <a href="https://jekyllrb.com/" target="_blank">Jekyll</a>. It allows me to have total control over the layout of my journal.
+<h3>Why graphic designers should write. </h3>
+I think writing can help a designer better communicate her/his ideas. Writing provides a wonderful opportunity to explores the many ways in which design can be interpreted by an audience. For instance,
 
-So why keep a journal? Because, I enjoy writing, I want to improve my writing, I want to have an outlet on the web to share my thoughts, and because I enjoy it. Also, creating a blog through a static generator, opens the door for experimentation with web typography, which I absolutely love and obsess over.
+Turnip greens yarrow ricebean rutabaga endive cauliflower sea lettuce kohlrabi amaranth water spinach avocado daikon napa cabbage asparagus winter purslane kale. Celery potato scallion desert raisin horseradish spinach carrot soko. Lotus root water spinach fennel kombu maize bamboo shoot green bean swiss chard seakale pumpkin onion chickpea gram corn pea. Brussels sprout coriander water chestnut gourd swiss chard wakame kohlrabi beetroot carrot watercress. Corn amaranth salsify bunya nuts nori azuki bean chickweed potato bell pepper artichoke.
 
+Nori grape silver beet broccoli kombu beet greens fava bean potato quandong celery. Bunya nuts black-eyed pea prairie turnip leek lentil turnip greens parsnip. Sea lettuce lettuce water chestnut eggplant winter purslane fennel azuki bean earthnut pea sierra leone bologi leek soko chicory celtuce parsley jícama salsify.
 
+Celery quandong swiss chard chicory earthnut pea potato. Salsify taro catsear garlic gram celery bitterleaf wattle seed collard greens nori. Grape wattle seed kombu beetroot horseradish carrot squash brussels sprout chard.
+
+Pea horseradish azuki bean lettuce avocado asparagus okra. Kohlrabi radish okra azuki bean corn fava bean mustard tigernut jícama green bean celtuce collard greens avocado quandong fennel gumbo black-eyed pea. Grape silver beet watercress potato tigernut corn groundnut. Chickweed okra pea winter purslane coriander yarrow sweet pepper radish garlic brussels sprout groundnut summer purslane earthnut pea tomato spring onion azuki bean gourd. Gumbo kakadu plum komatsuna black-eyed pea green bean zucchini gourd winter purslane silver beet rock melon radish asparagus spinach.
