removed image links

--- a/_posts/2016-11-16-faculty.md
+++ b/_posts/2016-11-16-faculty.md
@@ -5,18 +5,9 @@ client: "Faculty, an online publication"
 brief: ""
 research:
 solution:
-image: "faculty_thumb.jpg"
+image:
 tags: [project]
 ---
 
 
-
-{% include image.html path="projects/faculty/faculty-0.jpg" path-detail="projects/faculty/faculty-0.jpg" alt="Sample image" %}
-
-
-
-{% include image.html path="projects/faculty/faculty-1.jpg" path-detail="projects/faculty/faculty-1.jpg" alt="Sample image" %}
-
-
-{% include image.html path="projects/faculty/faculty-2.jpg" path-detail="projects/faculty/faculty-2.jpg" alt="Sample image" %}
 
