--- a/_posts/2016-11-16-logos.md
+++ b/_posts/2016-11-16-logos.md
@@ -5,19 +5,6 @@ client: "Various"
 brief: ""
 research:
 solution:
-image: logos/logos_thumb.jpg
+image:
 tags: [project]
 ---
-
-{% include image.html path="projects/logos/logo_depaul_aiga_logo-1.jpg" path-detail="projects/logos/logo_depaul_aiga_logo-1.jpg" alt="Sample image" %}
-
-
-
-{% include image.html path="projects/logos/logo_depaul_aiga_logo-2.jpg" path-detail="projects/logos/logo_depaul_aiga_logo-2.jpg" alt="Sample image" %}
-
-
-{% include image.html path="projects/logos/logo_rel_edu_1.jpg" path-detail="projects/logos/logo_rel_edu_1.jpg" alt="Sample image" %}
-
-{% include image.html path="projects/logos/logo_young_adults.jpg" path-detail="projects/logos/logo_young_adults.jpg" alt="Sample image" %}
-
-
