--- a/_posts/2016-11-16-maestro.md
+++ b/_posts/2016-11-16-maestro.md
@@ -5,12 +5,6 @@ client: "Maestro Health"
 brief: ""
 research:
 solution:
-image: maestro/maestro_thumb.jpg
+image:
 tags: [project]
 ---
-{% include image.html path="projects/maestro/maestro_1.jpg" path-detail="projects/maestro/maestro_1.jpg" alt="Sample image" %}
-
-{% include image.html path="projects/maestro/maestro_2.jpg" path-detail="projects/maestro/maestro_2.jpg" alt="Sample image" %}
-
-{% include image.html path="projects/maestro/maestro_3.jpg" path-detail="projects/maestro/maestro_3.jpg" alt="Sample image" %}
-
