--- a/_posts/2016-11-16-rsna.md
+++ b/_posts/2016-11-16-rsna.md
@@ -5,15 +5,8 @@ client: "DePaul University"
 brief: "DePaul University's College of Computing & Digital Media offers many graduate programs in technology. With the diversity of the programs, it is important to create a view book that encompasses all programs and highlights essential information that will target potential candidates and current students."
 research: "As part of the project, my responsibility was to collect essential information for each program and create a system of hierarchy for it. Also, I conducted interviews with current students and asked them what drove them to their enroll in their program and I asked if any print material played any role in their decision. Professors also assisted me in gathering content."
 solution: "After the research, I came to the conclusion that there is a large diversity in prospective students who come from different backgrounds that include previous education, language barriers, and different levels of familiarity with the programs. The solution was to create the view book with a neutral identity that doesn't subtract from the content and doesn't imply any biased opinions. The photography used is both a combination of abstract ideas as well as environment shots of the university and students."
-image: rsna/rsna_thumb.jpg
+image:
 tags: [project]
 ---
-
-{% include image.html path="projects/rsna/rsna-covers.gif" path-detail="projects/rsna/rsna-covers.gif" alt="Sample image" %}
-
-
-{% include image.html path="projects/rsna/rsna-spread-1.jpg" path-detail="projects/rsna/rsna-spread-1.jpg" alt="Sample image" %}
-
-{% include image.html path="projects/rsna/rsna-spread-2.jpg" path-detail="projects/rsna/rsna-spread-2.jpg" alt="Sample image" %}
 
 
