--- a/_posts/2016-11-16-s4sj.md
+++ b/_posts/2016-11-16-s4sj.md
@@ -5,16 +5,6 @@ client: "Old St. Patrick's Church"
 brief: ""
 research:
 solution:
-image: season/season_thumb.jpg
+image:
 tags: [project]
 ---
-
-{% include image.html path="projects/season/s4sj_1.jpg" path-detail="projects/season/s4sj_1.jpg" alt="Sample image" %}
-
-
-
-{% include image.html path="projects/season/s4sj_2.jpg" path-detail="projects/season/s4sj_2.jpg" alt="Sample image" %}
-
-
-{% include image.html path="projects/season/s4sj_3.jpg" path-detail="projects/season/s4sj_3.jpg" alt="Sample image" %}
-
