--- a/_posts/2016-11-16-faculty.md
+++ b/_posts/2016-11-16-faculty.md
@@ -2,12 +2,16 @@
 layout: project
 title: "Faculty"
 client: "Faculty, an online publication"
-brief: ""
-research:
-solution:
-image:
+brief: "Faculty is an online publication created by me, Christian Solorzano, immediately after graduating from DePaul University in June, 2016. Faculty is updated periodically and plans to grow in 2017. "
+research: "This project is an on-going research project that requires me to constantly be looking for inspiration in books, people, designers, environments, places, etc. I find the most valuable research in everyday life and daily observations which I am constantly writing about in my sketchbook."
+solution: "At the moment, Faculty's website is a foundation with the intent to grow and develop into a community of creators with a deep passion for humanity's well-being. The design research involved observing other online publications and creating a cohesive online platform that is flexible and has the ability to house a vast amount of content in a efficient and user friendly way."
+image: "thumbnails/project-faculty_0.jpg"
 tags: [project]
+description: "Christian Solorzano is a Chicago based designer who specializes in creating identities, design systems, interfaces, and thoughtful ideas for diverse audiences."
 ---
 
+{% img project-faculty_1.jpg alt:'Faculty Logo' %}
+{% img project-faculty_2.jpg alt:'Faculty Website' %}
+{% img project-faculty_3.jpg alt:'Faculty Poster' %}
 
 
