--- a/_posts/2016-11-16-maestro.md
+++ b/_posts/2016-11-16-maestro.md
@@ -2,9 +2,13 @@
 layout: project
 title: "Maestro Health Marketing Collateral"
 client: "Maestro Health"
-brief: ""
-research:
-solution:
-image:
+brief: "Maestro Health is a health care technology company based in Chicago. During my time as Junior Graphic Designer, I was responsible for creating print collateral whilst adhering to their brand guidelines."
+research: "Research involved following brand guidelines and researching design trends."
+solution: "Design solutions were the result of collaboration between the marketing department, senior designer, and I. "
+image: "thumbnails/project-maestro_0.jpg"
 tags: [project]
+description: "Christian Solorzano is a Chicago based designer who specializes in creating identities, design systems, interfaces, and thoughtful ideas for diverse audiences."
 ---
+{% img project-maestro_1.jpg alt:'Maestro Health Publication' %}
+{% img project-maestro_2.jpg alt:'Maestro Health Posters' %}
+{% img project-maestro_3.jpg alt:'Maestro Health E-Mails' %}
