--- a/_posts/2016-11-16-s4sj.md
+++ b/_posts/2016-11-16-s4sj.md
@@ -2,9 +2,14 @@
 layout: project
 title: "Season for Social Justice"
 client: "Old St. Patrick's Church"
-brief: ""
-research:
-solution:
-image:
+brief: "Old St. Patrick's Church has an annual season for social justice and each year it focuses on a new topic. In 2015, the big question that the church wanted people to think about was ‘How Are We to Act’? As a designer, I was ordered to create something insightful that would attract the eyes of the general public and congregation. What was required was an outdoor banner, a website banner, publication advertisements and print ephemera to be given during mass."
+research: "This was a very interesting project to work on because I was very unfamiliar with designing for a church. I looked through the church's archives to see if I could find any reference material which I fortunately did. Also, I asked the project manager a million questions which helped immensely. While working, I presented concepts and experimented with color, typography, and size."
+solution: "The title of the Season For Social Justice was ‘We Belong to God. We Belong to Each Other. How Are We To Act?’ Such a powerful statement deserves to be at the center of attention. I created the identity in black & white to give it a feel of power and humility. The majority of design was done with special attention to typography and hierarchy. Overall, the project was well received."
+image: "thumbnails/project-s4sj_0.jpg"
 tags: [project]
+description: "Christian Solorzano is a Chicago based designer who specializes in creating identities, design systems, interfaces, and thoughtful ideas for diverse audiences."
 ---
+
+{% img project-s4sj_1.jpg alt:'Season for Social Justice Logo' %}
+{% img project-s4sj_2.jpg alt:'Season for Social Justice Buttons' %}
+{% img project-s4sj_3.jpg alt:'Season for Social Justice Banner' %}
