--- a/_posts/2016-11-16-vatic.md
+++ b/_posts/2016-11-16-vatic.md
@@ -1,10 +1,22 @@
 ---
 layout: project
-title: "Vatic Labs"
+title: "Vatic Labs Brand Identity"
 client: "Vatic Labs"
 brief: "Vatic Labs came to UpShift Creative seeking a comprehensive brand identity that is engaging and responsive to various mediums. Their demographic included graduate students interested in quantitative trading. I worked closely with the art director to execute concepts and provide ideas while maintaining our audience and client in mind."
-research:
-solution:
-image:
+research: "Communication with the client was a big component of the research phase. We presented various concepts and the client also sent us examples of work that he found successful. The majority of the initial research phase included looking at design trends relevant in this particular industry."
+solution: "The brand identity incorporates a logo influenced by the integration of technology and algorithmic quantitative trading. The colors evoke a sophisticated, modern, and neutral perspective that is tailored towards recruiting potential employees."
+image: "thumbnails/project-vatic_0.jpg"
 tags: [project]
+description: "Christian Solorzano is a Chicago based designer who specializes in creating identities, design systems, interfaces, and thoughtful ideas for diverse audiences."
 ---
+
+{% img project-vatic_0.jpg alt:'Vatic Labs Logo' %}
+{% img project-vatic_1.jpg alt:'Vatic Labs Website' %}
+{% img project-vatic_2.jpg alt:'Vatic Labs Stationery' %}
+{% img project-vatic_3.jpg alt:'Vatic Labs Banners' %}
+
+<center>
+<div class="credits">
+<h5>Credits</h5>
+<h7>Agency: UpShift Creative <br> Art Direction: Richard Shanks <br> Developer: Stephen Taruc</h7>
+</div>
