--- a/_posts/2016-12-26-musicof2016.md
+++ b/_posts/2016-12-26-musicof2016.md
@@ -1,17 +1,13 @@
 ---
 layout: post
-title: "Music of 2016"
+title: "On music of 2016"
 description: "Journal or Blog? Which is it?"
 tags: [personal]
 ---
 
-2016 was an exciting year for music. Spotify has transformed the way I consume music
-I often fantasize about being an avid writer.
+<h2>2016 was an eventful year. </h2>
+So I made a playlist of the soundtrack to my 2016.
 
-<i> “Today will be the day I write an amazing piece! I will share it with the world and all will great.”</i>
-
-Life doesn't work that way. For the past couple of years, I've maneuvered between Wordpress and Tumblr. Which do I use? Which is better? Why do some people prefer one over the other? Does it matter? Ahh! At last I stumbled upon a static site generator called <a href="https://jekyllrb.com/" target="_blank">Jekyll</a>. It allows me to have total control over the layout of my journal.
-
-So why keep a journal? Because, I enjoy writing, I want to improve my writing, I want to have an outlet on the web to share my thoughts, and because I enjoy it. Also, creating a blog through a static generator, opens the door for experimentation with web typography, which I absolutely love and obsess over.
+<iframe src="https://embed.spotify.com/?uri=spotify%3Auser%3A1216585089%3Aplaylist%3A4XEdevgsTxlbR67J88REPM" width="100%" height="380" frameborder="0" allowtransparency="true"></iframe>
 
 
