--- a/_posts/2016-11-16-rsna.md
+++ b/_posts/2016-11-16-rsna.md
@@ -1,12 +1,23 @@
 ---
 layout: project
-title: "College of Computing & Digitial Media Viewbook"
-client: "DePaul University"
-brief: "DePaul University's College of Computing & Digital Media offers many graduate programs in technology. With the diversity of the programs, it is important to create a view book that encompasses all programs and highlights essential information that will target potential candidates and current students."
-research: "As part of the project, my responsibility was to collect essential information for each program and create a system of hierarchy for it. Also, I conducted interviews with current students and asked them what drove them to their enroll in their program and I asked if any print material played any role in their decision. Professors also assisted me in gathering content."
-solution: "After the research, I came to the conclusion that there is a large diversity in prospective students who come from different backgrounds that include previous education, language barriers, and different levels of familiarity with the programs. The solution was to create the view book with a neutral identity that doesn't subtract from the content and doesn't imply any biased opinions. The photography used is both a combination of abstract ideas as well as environment shots of the university and students."
-image:
+title: "Radiological Society of North America Brochures"
+client: "Radiological Society of North America"
+brief: "RSNA holds an annual event in Chicago dedicated to educational courses and presentations. In 2016, RSNA asked UpShift Creative to create and design a series of brochures for their various subjects. "
+research: "Part of the research involved exploring RSNA's brand identity and incorporating elements into the brochures. Certain informational elements were required to be on the cover so exploring typographic options was one of the first steps. In addition, numerous brochure spread concepts were also created. Because the majority of the brochures are very text-heavy; hierarchy and typography became fundamental elements that required strong attention to detail."
+solution: "The final solution consisted of creating typographic styles that remain consistent throughout all the brochures. This project required us to use various font families to differentiate information. Certain elements are bold, some are larger and some are smaller. All design decisions were created for an optimal reading experience and ease of use. Each brochure uses a distinct color unique to its particular subject."
+image: "thumbnails/project-rsna_0.jpg"
 tags: [project]
+description: "Christian Solorzano is a Chicago based designer who specializes in creating identities, design systems, interfaces, and thoughtful ideas for diverse audiences."
 ---
 
+{% img project-rsna_1.gif alt:'RSNA Brochure Covers' %}
+{% img project-rsna_2.jpg alt:'RSNA Brochure Spread' %}
+{% img project-rsna_3.jpg alt:'RSNA Brochure Spread' %}
+{% img project-rsna_4.jpg alt:'RSNA Brochure Spread Detail' %}
 
+
+<center>
+<div class="credits">
+<h5>Credits</h5>
+<h7>Agency: UpShift Creative <br> Art Direction: Richard Shanks <br> Collaboration: Renee Kuklenski <br> </h7>
+</div>
