--- a/_posts/2016-11-26-anger.md
+++ b/_posts/2016-11-26-anger.md
@@ -1,12 +1,19 @@
 ---
 layout: project
-title: "Kenneth Anger Packaging"
-client: "Kenneth Anger Packaging Design"
+title: "Kenneth Anger"
+client: "Kenneth Anger Package Design Concept"
 brief: "Kenneth Anger is a prolific and influential film maker in the underground avant-garde film scene. His films have been the subject of controversy throughout his life and have influenced directors such as Martin Scorcese and John Waters. The purpose of this project was to create packaging for a set of Anger films and design the package in a way that combines Anger's personality and taste into a single object."
 research: "The films included are Scorpio Rising and Kustom Kar Kommandos. The biggest source of inspiration was watching these films numerous types and also reading several biographies on Kenneth Anger. After obtaining a tone and mood, it was easy to start creating concepts."
 solution: "Due to the fact that Anger has a very dark personality and is fascinated with the occult and subliminal messages, I chose to use strong colors to evoke a sense of urgency and importance. Because most of Anger's work is open to interpretation, I decided to stay away from forcing any opinions upon the audience and allowing Anger's work to speak for itself."
 type: "Packaging"
-image:
+image: "thumbnails/project-anger_0.jpg"
 tags: [project]
+description: "Christian Solorzano is a Chicago based designer who specializes in creating identities, design systems, interfaces, and thoughtful ideas for diverse audiences."
 ---
+
+{% img project-anger_1.jpg alt:'Kenneth Anger Packaging' %}
+{% img project-anger_2.jpg alt:'Kenneth Anger DVDs' %}
+{% img project-anger_3.jpg alt:'Kenneth Anger Poster' %}
+
+
 
