--- a/_posts/2016-12-24-goleta.md
+++ b/_posts/2016-12-24-goleta.md
@@ -12,7 +12,7 @@ description: "Christian Solorzano is a Chicago based designer who specializes in
 
 {% img project-goleta_4.jpg alt:'Go Goleta Website' %}
 {% img project-goleta_1.jpg alt:'Go Goleta Website' %}
-{% img project-goleta_2.jpg alt:'Go Goleta Website' %}
+{% img project-goleta-icon.gif alt:'Go Goleta Website' %}
 {% img project-goleta_3.jpg alt:'Go Goleta Website' %}
 {% img project-goleta_5.jpg alt:'Go Goleta Website' %}
 {% img project-goleta_6.jpg alt:'Go Goleta Website' %}
