everything is working

--- a/_posts/2016-11-16-s4sj.md
+++ b/_posts/2016-11-16-s4sj.md
@@ -1,6 +1,7 @@
 ---
 layout: project
 title: "Season for Social Justice"
+category: "Art Direction"
 client: "Old St. Patrick's Church"
 brief: "Old St. Patrick's Church has an annual season for social justice and each year it focuses on a new topic. In 2015, the big question that the church wanted people to think about was ‘How Are We to Act’? As a designer, I was ordered to create something insightful that would attract the eyes of the general public and congregation. What was required was an outdoor banner, a website banner, publication advertisements and print ephemera to be given during mass."
 research: "This was a very interesting project to work on because I was very unfamiliar with designing for a church. I looked through the church's archives to see if I could find any reference material which I fortunately did. Also, I asked the project manager a million questions which helped immensely. While working, I presented concepts and experimented with color, typography, and size."
