--- a/_posts/2016-11-16-vatic.md
+++ b/_posts/2016-11-16-vatic.md
@@ -1,6 +1,7 @@
 ---
 layout: project
 title: "Vatic Labs Brand Identity"
+category: "Branding, Logo Design, User Interface Design"
 client: "Vatic Labs"
 brief: "Vatic Labs came to UpShift Creative seeking a comprehensive brand identity that is engaging and responsive to various mediums. Their demographic included graduate students interested in quantitative trading. I worked closely with the art director to execute concepts and provide ideas while maintaining our audience and client in mind."
 research: "Communication with the client was a big component of the research phase. We presented various concepts and the client also sent us examples of work that he found successful. The majority of the initial research phase included looking at design trends relevant in this particular industry."
