--- a/_posts/2016-12-31-booksof2016.md
+++ b/_posts/2016-12-31-booksof2016.md
@@ -5,12 +5,11 @@ description: "My favorite books of 2016."
 tags: [personal]
 ---
 
-<h2>I read more in 2016 than in any previous year.</h2>
 Below are my top 8 books that I read in 2016.
 
 
 
-{% img post-2016-12-31-books_2016.jpg alt:'Books of 2016'%}
+{% img post-2016-12-31-books_2016.png alt:'Books of 2016'%}
 <ol>
 <li>
 <h4><a href="https://www.goodreads.com/book/show/331344.Being_Peace" target="_blank">Being Peace —  Thich Nhat Hanh</a></h4>
