--- a/_posts/2017-05-17-uflacker.md
+++ b/_posts/2017-05-17-uflacker.md
@@ -1,5 +1,6 @@
 ---
 layout: project
+category: "User Interface Design, Art Direction, Photography"
 title: "Uflacker Academy"
 client: "Uflacker Academy"
 brief: "Uflacker Academy is a Brazilian Jiu Jitsu academy in Chicago. Their previous website was outdated, unresponsive, and inconsistent with current web trends. My task as the lead designer was to create a new custom interface dedicated to communicating the academy's philosophy, curriculum, and programs."
