--- a/_posts/2016-11-16-rsna.md
+++ b/_posts/2016-11-16-rsna.md
@@ -1,6 +1,7 @@
 ---
 layout: project
 title: "Radiological Society of North America Brochures"
+category: "Art Direction, Print Design, Layout"
 client: "Radiological Society of North America"
 brief: "RSNA holds an annual event in Chicago dedicated to educational courses and presentations. In 2016, RSNA asked UpShift Creative to create and design a series of brochures for their various subjects. "
 research: "Part of the research involved exploring RSNA's brand identity and incorporating elements into the brochures. Certain informational elements were required to be on the cover so exploring typographic options was one of the first steps. In addition, numerous brochure spread concepts were also created. Because the majority of the brochures are very text-heavy; hierarchy and typography became fundamental elements that required strong attention to detail."
