--- a/_posts/2016-12-24-goleta.md
+++ b/_posts/2016-12-24-goleta.md
@@ -1,6 +1,7 @@
 ---
 layout: project
 title: "Go Goleta"
+category: "User Interface Design"
 client: "Go Goleta"
 brief: "Go Goleta is the destination marketing organization that provides tourism services under the Goleta Valley Chamber of Commerce (Goleta Valley COC). Their mission now is to establish Goleta as its own destination brand via a new website which provides inspiration for the Go Goleta brand alongside a user-friendly experience that offers the necessary tools and information to ultimately drive bookings to Goleta."
 research: "Communication with the client was a key component of this project. Throughout the research phase, we explored trends and design patterns within tourism websites. Our main focus was to make this website as user friendly as possible so we focused on balancing the visual components with the functionality of the website.  "
