new post updates

--- a/_posts/2018-12-31-top_8_of_2018.md
+++ b/_posts/2018-12-31-top_8_of_2018.md
@@ -1,6 +1,6 @@
 ---
 layout: post
-title: "My Top 8 of 2018"
+title: "On my top 8 of 2018"
 description: " Several lists consisting of some of my favorite films, music, and books, from 2018."
 page.og_image: post-2018-12-27-lessons_learned.png
 tags: [personal]
