--- a/_posts/2025-09-14-post.markdown
+++ b/_posts/2025-09-14-post.markdown
@@ -25,6 +25,17 @@ published: true
 
 ---
 Today, I turn thirty-four years old.
+
 I was born on this day, in Dallas Texas.
+
+Being alive for this long, I arrive at a few key lessons learned along the way.
+
+They are:
+
+1. Be stubborn
+2. Take calculated risks
+3. Embrace boredom
+4. Don't pick sides (be in the middle)
+5. It's possible to hold two opposing truths
 
 
