--- a/_posts/2025-09-14-post.markdown
+++ b/_posts/2025-09-14-post.markdown
@@ -32,10 +32,17 @@ Being alive for this long, I arrive at a few key lessons learned along the way.
 
 They are:
 
-1. Be stubborn
+1. Be stubborn with your purpose
 2. Take calculated risks
 3. Embrace boredom
 4. Don't pick sides (be in the middle)
 5. It's possible to hold two opposing truths
+6. Find mentor(s)
+7. Love your enemy
+8. Try not to use divisive language 
+9. Embrace solitude
+10. Give back
+11. Every now and then, be a bit reckless
+12. Listen more than you talk
 
 
