fixes to config file and also to birthday post

--- a/_posts/2025-09-14-post.markdown
+++ b/_posts/2025-09-14-post.markdown
@@ -36,14 +36,16 @@ They are:
 2. Take calculated risks
 3. Embrace boredom
 4. Don't pick sides (be in the middle)
-5. It's possible to hold two opposing truths
+5. Learn to sit with two opposing truths
 6. Find mentor(s)
-7. Love your enemy
-8. Try not to use divisive language 
-9. Embrace solitude
-10. Give back
-11. Every now and then, be a bit reckless
-12. Listen more than you talk
-13. Walk the middle way
+7. Try not to use divisive language 
+8. Embrace solitude
+9. Give back
+10. Be a bit reckless occasionally
+11. Listen more than you talk
+12. Teach
+13. Don't strive to always make sense
+14. Move around (whatever that means)
+15. Speak up 
 
 
