--- a/_posts/2025-09-17-post.markdown
+++ b/_posts/2025-09-17-post.markdown
@@ -27,6 +27,6 @@ published: true
 
 Leave some aspect of being — incomplete 
 
-As an entrance allowing the mind imagine its conclusion.
+Allowing the mind imagine its conclusion.
 
 
