--- a/_posts/2025-09-18-post.markdown
+++ b/_posts/2025-09-18-post.markdown
@@ -26,7 +26,7 @@ published: true
 ---
 
 I've been reflecting on our profession of design and concluding that what we do, is all alarmingly subjective. 
-Thoughts on aesthetics and taste are all arbitrary—and what I may find as perfect, you may make you yawn your face off.
+Thoughts on aesthetics and taste are all arbitrary—and what I may find as perfect, may make you yawn your face off.
 This comes to mind after sharing work I found inspiring to a group of friends, and them all having a different 
 opinion than mine — all which were valid and as true as mine. 
 
